--- a/senha.html
+++ b/senha.html
@@ -22,26 +22,17 @@
       <a href="ftemblema.jpeg"></a>
     </div>
     <div>
-      <h3>Entre agora mesmo!</h3>
+      <h3>Confirme seu Email de recuperação de sua senha!</h3>
     </div>
     <form action="" class="form-floating formulario mb-3 m-3 was-validated " novalidate>
       <div class="form-floating mb-3">
         <input type="email" class="form-control  inputEmail" id="floatingInput" placeholder="name@example.com" required>
         <label for="floatingInput">Email</label>
       </div>
-      <div class="form-floating">
-        <input type="password" class="form-control inputPassword" id="floatingPassword" placeholder="Password" required minlength="6
-          value="
-        >
-        <label for="floatingPassword">Password</label>
-      </div>
-      <div>
-        <a href="senha.html">Esqueceu a senha?</a>
-      </div>
-      <br>  
+      
       <div>
         <button type="submit" id="btEnviar" class="btn btn-danger w-100"
-        >Entrar</button>
+        >Enviar código de recuperação</button>
       </div>
       <div>
         <p4>Não tem uma conta?</p4>
