--- a/home.html
+++ b/home.html
@@ -15,8 +15,8 @@
         <div class="container">
             <div class="row">
                 <div class="navegacao">
-                    <div>
-                        <img src="ftemblema.jpeg" width="70" height="70"> </a>
+                    <div class="menu">
+                        <img src="WhatsApp_Image_2022-09-26_at_13.52.22-removebg-preview 2.png" width="100" height="70"> </a>
                     </div>
                     <div class="navlink d-flex justify-content-end">
                         
