--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
                     <a href="#"> Alugar</a>
                 </div>
                 <div class="navlink">
-                    <a href="#"> Fazer Reserva</a>
+                    <a href="#"> Reserva</a>
                 </div>
                 <div class="navlink">
                     <a href="#"> Descobrir</a>
