Incluindo bootstrap na home

--- a/formulario.html
+++ b/formulario.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <script src="code.js"></script>
     <title>Trabalho Incremental Web</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
     <script
   src="https://code.jquery.com/jquery-3.6.0.js"
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
@@ -87,9 +87,11 @@
             </select>
         </div>
       </div>
-    
-
         <button type="submit" class="botao btn btn-danger w-100">Se Inscrever</button>
+        <div>
+          <br>
+          <p>Já tem uma conta?<a href="login.html"> Ir para login</a></p>
+        </div>
       </form>
     </div>
                      
