--- a/login.html
+++ b/login.html
@@ -7,21 +7,24 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <script
-  src="https://code.jquery.com/jquery-3.6.0.js"
-  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
 
   <title>Trabalho Incremental Web</title>
   <link rel="stylesheet" href="Style.css">
 </head>
 
 <body>
+
+  <div class="imagem01">
+    <a href="home.html"> <img src="voltar-removebg-preview.png" width="100" height="40"> </a>
+  </div>
+
   <div class="container w-50">
     <div id="icons">
       <a href="ftemblema.jpeg"></a>
     </div>
-    <div>
+    <div class="texto d-flex justify-content-center ">
       <h3>Entre agora mesmo!</h3>
     </div>
     <form action="" class="form-floating formulario mb-3 m-3 was-validated " novalidate>
@@ -30,28 +33,25 @@
         <label for="floatingInput">Email</label>
       </div>
       <div class="form-floating">
-        <input type="password" class="form-control inputPassword" id="floatingPassword" placeholder="Password" required minlength="6
-          value="
-        >
+        <input type="password" class="form-control inputPassword" id="floatingPassword" placeholder="Password" required
+          minlength="6
+          value=">
         <label for="floatingPassword">Password</label>
       </div>
       <div>
         <a href="senha.html">Esqueceu a senha?</a>
       </div>
-      <br>  
+      <br>
       <div>
-        <button type="submit" id="btEnviar" class="btn btn-danger w-100"
-        >Entrar</button>
+        <button type="submit" id="btEnviar" class="btn btn-danger w-100">Entrar</button>
       </div>
       <div>
-        <br>
         <p4>Não tem uma conta?</p4>
         <a href="formulario.html">Inscreva-se</a>
       </div>
     </form>
   </div>
 
-  <!-- <script src="login.js"></script> -->
 </body>
 
 </html>
