--- a/senha.html
+++ b/senha.html
@@ -7,10 +7,8 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <script
-  src="https://code.jquery.com/jquery-3.6.0.js"
-  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
 
   <title>Trabalho Incremental Web</title>
   <link rel="stylesheet" href="Style.css">
@@ -29,10 +27,9 @@
         <input type="email" class="form-control  inputEmail" id="floatingInput" placeholder="name@example.com" required>
         <label for="floatingInput">Email</label>
       </div>
-      
+
       <div>
-        <button type="submit" id="btEnviar" class="btn btn-danger w-100"
-        >Enviar código de recuperação</button>
+        <button type="submit" id="btEnviar" class="btn btn-danger w-100">Enviar código de recuperação</button>
       </div>
       <div>
         <p4>Não tem uma conta?</p4>
@@ -40,8 +37,6 @@
       </div>
     </form>
   </div>
-
-  <!-- <script src="login.js"></script> -->
 </body>
 
 </html>
