Página de alugar imóvel

--- a/home.html
+++ b/home.html
@@ -16,12 +16,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 p-1 d-flex flex-row justify-content-around">
-                    <div class="navegacao">
+                    <div class="navegacao navlink d-flex justify-content-center">
                         <div class="menu">
                             <img src="WhatsApp_Image_2022-09-26_at_13.52.22-removebg-preview.png" width="100" height="70"> </a>
-                        </div>
-                        <div class="navlink d-flex justify-content-end">
-                            
+                        </div>    
                         <div class="navlink">
                             <a href="#"> Comprar</a>
                         </div>
@@ -73,16 +71,14 @@
                             </select>
                           </div>
                         </div>
-
                         <form>
                             <div class="mb-3">
                               <label for="exampleInputEmail1" class="form-label"> Onde deseja sua locação? </label>
                               <input type="email" class=" forms form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                              
                             </div>
                         </form>
                         <div class="d-grid gap-2">
-                            <button class="btn btn-danger" type="button"><i class="bi bi-search"></i>Buscar</button>
+                            <button class="btn btn-danger" type="button"><i class="bi bi-search"></i> Buscar</button>
                         </div>
                         </div>
                     </div>
