--- a/senha.html
+++ b/senha.html
@@ -24,7 +24,7 @@
     <div>
       <h3>Confirme seu Email de recuperação de sua senha!</h3>
     </div>
-    <form action="" class="form-floating formulario mb-3 m-3 was-validated " novalidate>
+    <form action="" class="form-floating formulario mb-3 m-3 was-validate " novalidate>
       <div class="form-floating mb-3">
         <input type="email" class="form-control  inputEmail" id="floatingInput" placeholder="name@example.com" required>
         <label for="floatingInput">Email</label>
