resolvendo problema de conflito da home

--- a/alugar.html
+++ b/alugar.html
@@ -24,7 +24,7 @@
                 <p>Tipo de transação</p>
                 <div class="btn-group btn-group-lg p-1 d-flex flex-row justify-content-center" role="group" aria-label="Large button group">
                 <button type="button" class="btn btn-outline-dark">Comprar</button>
-                <button type="button" class="btn btn-outline-dark">Alugar</button>
+                <button type="button" class="btn btn-danger">Alugar</button>
                 <button type="button" class="btn btn-outline-dark">Reserva</button>
                 </div>
                 <br>
