--- a/home.html
+++ b/home.html
@@ -9,47 +9,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
     <title>Trabalho Incremental Web</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<<<<<<< HEAD
-        <div class="container">
-            <div class="row">
-                <div class="col-12 p-1 d-flex flex-row justify-content-around">
-                    <div class="navegacao navlink d-flex justify-content-center">
-                        <div class="menu">
-                            <img src="WhatsApp_Image_2022-09-26_at_13.52.22-removebg-preview.png" width="100" height="70"> </a>
-                        </div>    
-                        <div class="navlink">
-                            <a href="#"> Comprar</a>
-                        </div>
-                        <div class="navlink">
-                            <a href="#"> Alugar</a>
-                        </div>
-                        <div class="navlink">
-                            <a href="#"> Reserva</a>
-                        </div>
-                        <div class="navlink">
-                            <a href="#"> Descobrir</a>
-                        </div>
-                        <div>
-                            <button type="button" class="btn btn-dark">Anunciar</button>
-                        </div>
-                        <div>
-                            <a href="login.html">
-                                <button type="button" class="btn btn-danger"><i class="bi bi-person-fill"></i> Entrar</button>
-                                </a>
-                        </div>
-                    </div>
-=======
     <div class="container">
         <div class="row">
             <div class="navegacao">
                 <div>
                     <a href="home.html"> <img src="WhatsApp_Image_2022-09-26_at_13.52.22-removebg-preview.png"
                             width="100" height="70"> </a>
->>>>>>> 07f41a0a71fdd2b85c0dc0a18103ad04b7b465f7
                 </div>
                 <div class="navlink d-flex justify-content-end">
 
@@ -57,7 +26,7 @@
                         <a href="comprar.html"> Comprar</a>
                     </div>
                     <div class="navlink">
-                        <a href="#"> Alugar</a>
+                        <a href="alugar.html"> Alugar</a>
                     </div>
                     <div class="navlink">
                         <a href="#"> Fazer Reserva</a>
@@ -84,7 +53,7 @@
 
                         <div class="btn-group btn-group-lg" role="group" aria-label="Large button group">
                             <a href="comprar.html"> <button type="button" class="btn btn-outline-dark">Comprar</button> </a>
-                            <a> <button type="button" class="btn btn-outline-dark">Alugar</button> </a>
+                            <a href="alugar.html"> <button type="button" class="btn btn-outline-dark">Alugar</button> </a>
                             <a> <button type="button" class="btn btn-outline-dark">Fazer Reserva</button> </a>
                         </div>
 
@@ -100,7 +69,7 @@
                                 <option>Apartamento de Condominio</option>
                             </select>
                         </div>
-<<<<<<< HEAD
+
                         <form>
                             <div class="mb-3">
                               <label for="exampleInputEmail1" class="form-label"> Onde deseja sua locação? </label>
@@ -110,20 +79,6 @@
                         <div class="d-grid gap-2">
                             <button class="btn btn-danger" type="button"><i class="bi bi-search"></i> Buscar</button>
                         </div>
-=======
-                    </div>
-
-                    <form>
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label"> Onde deseja sua locação? </label>
-                            <input type="email" class=" forms form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
-
->>>>>>> 07f41a0a71fdd2b85c0dc0a18103ad04b7b465f7
-                        </div>
-                    </form>
-                    <div class="d-grid gap-2">
-                        <button class="btn btn-danger" type="button"><i class="bi bi-search"></i>Buscar</button>
                     </div>
 
                 </div>
@@ -131,8 +86,6 @@
 
         </div>
     </div>
-    </div>
-
 </body>
 
 </html>
