adicionando algumas funcionalidades

--- a/anunciar.html
+++ b/anunciar.html
@@ -17,16 +17,13 @@
 </head>
 
 <body>
-  
     <div class="container">
         <div class="row">
             <div class="col-4 flex-row justify-content-start">
                 <br>
                 <p>Tipo de transação</p>
                 <div class="btn-group btn-group-lg p-1 d-flex flex-row justify-content-center" role="group" aria-label="Large button group">
-                <button type="button" class="btn btn-outline-dark">Comprar</button>
-                <button type="button" class="btn btn-danger">Alugar</button>
-                <button type="button" class="btn btn-outline-dark">Reserva</button>
+                    <button type="button" class="btn btn-danger">Anunciar</button>
                 </div>
                 <br>
                 <p>Qual o tipo?</p>
@@ -80,12 +77,12 @@
             </div>
             <div class="col-8">
                 <br>
-                <p>Imóveis para alugar</p>
-                <h5>120.657 imóveis para alugar</h5>
+                <p>Imóveis para alugar é só aqui...</p>
+                <h5>Anuncie seu imóvel agora mesmo!</h5>
                 <br>
                 <div>
                     <button type="button" class="btn btn-outline-dark">Mapa</button>
-                    <button type="button" class="btn btn-outline-dark">Salvar busca</button>
+                    <button type="button" class="btn btn-outline-dark">Adicionar + fotos</button>
                 </div>
                 <br>
                 <br>
@@ -119,19 +116,11 @@
                           <button type="button" class="btnmsg btn btn-outline-dark">Mensagem</button>
                         </div>
                       </div>
-                    </div>
+                    </div>                
                   </div>
-                <!-- <div>
-                 <img src="apt1.webp" alt="">
+                  <div class="botaoanuncio">
+                  <button type="button" class="btn btn-danger w-75 ">Anunciar seu imóvel</button>
                 </div>
-                <br>
-                <div>
-                    <img src="apt2.jpg" alt="">
-                </div>
-                <br>
-                <div>
-                    <img src="apt3.jpg" alt="">
-                </div> -->
             </div>
         </div>
     </div>
