--- a/comprar.html
+++ b/comprar.html
@@ -23,16 +23,13 @@
                 <div class="navlink d-flex justify-content-end">
 
                     <div class="navlink">
-                        <a href="#"> Comprar</a>
+                        <a href="comprar.html"> Comprar</a>
                     </div>
                     <div class="navlink">
-                        <a href="#"> Alugar</a>
+                        <a href="alugar.html"> Alugar</a>
                     </div>
                     <div class="navlink">
-                        <a href="#"> Fazer Reserva</a>
-                    </div>
-                    <div class="navlink">
-                        <a href="#"> Descobrir</a>
+                        <a href="reserva.html"> Fazer Reserva</a>
                     </div>
                     <div>
                         <button type="button" class="btn btn-dark">Anunciar</button>
