--- a/reserva.html
+++ b/reserva.html
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-  
     <div class="container">
         <div class="row">
             <div class="col-4 flex-row justify-content-start">
@@ -25,8 +24,8 @@
                 <p>Tipo de transação</p>
                 <div class="btn-group btn-group-lg p-1 d-flex flex-row justify-content-center" role="group" aria-label="Large button group">
                 <button type="button" class="btn btn-outline-dark">Comprar</button>
-                <button type="button" class="btn btn-danger">Alugar</button>
-                <button type="button" class="btn btn-outline-dark">Reserva</button>
+                <button type="button" class="btn btn-outline-dark">Alugar</button>
+                <button type="button" class="btn btn-danger">Reserva</button>
                 </div>
                 <br>
                 <p>Qual o tipo?</p>
