--- a/frontend/alugar.html
+++ b/frontend/alugar.html
@@ -121,17 +121,9 @@
                       </div>
                     </div>
                   </div>
-                <!-- <div>
-                 <img src="apt1.webp" alt="">
-                </div>
-                <br>
-                <div>
-                    <img src="apt2.jpg" alt="">
-                </div>
-                <br>
-                <div>
-                    <img src="apt3.jpg" alt="">
-                </div> -->
+                  <div class="botaoanuncio">
+                    <button type="button" class="btn btn-danger w-75 ">Alugar</button>
+                  </div>
             </div>
         </div>
     </div>
