--- a/frontend/comprar.html
+++ b/frontend/comprar.html
@@ -32,11 +32,13 @@
                         <a href="reserva.html"> Fazer Reserva</a>
                     </div>
                     <div>
-                        <button type="button" class="btn btn-dark">Anunciar</button>
+                        <a href="anunciar.html">
+                            <button type="button" class="btn btn-dark">Anunciar</button>
+                        </a>
                         <a href="login.html">
                             <button type="button" class="btn btn-danger"><i class="bi bi-person-fill"></i>
                                 Entrar</button>
-                        </a>
+                            </a>
                     </div>
                 </div>
 
