Atualizando rotas e resolvendo problemas de componentizacao

--- a/backend/vite-project/index.html
+++ b/backend/vite-project/index.html
@@ -79,7 +79,7 @@
                           </div>
                       </form>
                       <div class="d-grid gap-2">
-                          <button class="btn btn-danger" type="button"><i class="bi bi-search"></i> Buscar</button>
+                          <button class="btn btn-danger" type="submit" ><i class="bi bi-search"></i> Buscar</button>
                       </div>
                   </div>
 
